# genericIO

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.md  README.md  Untitled.ipynb  build.sh  genericIOConfig.cmake  genericIOConfig.cmake.in  ioConfig.h  ioConfig.h.in  log  meta.yaml  pythony
cmake/: FindZFP.cmake
converters/: CMakeLists.txt
converters/segy/: CMakeLists.txt  GenReadSegy.py
cpp/: CMakeLists.txt  axis.cpp  axis.h  basicIO.cpp  basicIO.h  buffersIO.cpp  buffersIO.h  buffersIrregFile.h  buffersRegFile.cpp  buffersRegFile.h  dictParams.cpp  dictParams.h  fileBuffersIO.cpp  fileBuffersIO.h  fileBuffersRegFile.cpp  fileBuffersRegFile.h  gcpBuffersIO.cpp  gcpBuffersIO.h  gcpBuffersRegFile.cpp  gcpBuffersRegFile.h  genericC.cpp  genericC.h  genericFile.cpp  genericFile.h  genericIO.cpp  genericIO.h  hypercube.cpp  hypercube.h  ioModes.cpp  ioModes.h  irregFile.h  jsonGenericFile.cpp  jsonGenericFile.h  jsonGenericIO.cpp  jsonGenericIO.h  jsonGenericIrregFile.cpp  jsonGenericIrregFile.h  jsonGenericRegFile.cpp  jsonGenericRegFile.h  jsonParamObj.cpp  (+24 more)
cpp/base/: CMakeLists.txt  axis.cpp  axis.h  basicIO.cpp  basicIO.h  genericFile.cpp  genericFile.h  genericIO.cpp  genericIO.h  hypercube.cpp  hypercube.h  jsonGenericFile.cpp  jsonGenericFile.h  jsonGenericIO.cpp  jsonGenericIO.h  jsonParamObj.cpp  jsonParamObj.h  paramObj.cpp  paramObj.h
cpp/rsf/: CMakeLists.txt  rsfIO.cpp  rsfIO.h  rsfParams.cpp  rsfParams.h  rsfRegFile.cpp  rsfRegFiles.h
cpp/sep/: CMakeLists.txt  sep3dFile.cpp  sepIO.cpp  sep_params.cpp  sep_params.h  sep_reg_file.cpp  sep_reg_file.h
cpp/su/: CMakeLists.txt  rsfParams.cpp  rsfParams.h  rsfRegFile.cpp  rsfRegFiles.h  sepRegFile.cpp  sepRegFiles.h
docker-compose/gcpIO/: Dockerfile  docker-compose.yml
dockers/: @  Dockerfile.centos  Dockerfile.debian  Dockerfile.debian-gcp  Dockerfile.debianDevel  a
docs/: Doxyfile.in
env-modules/: CMakeLists.txt
examples/: CMakeLists.txt  ReadWriteGCP.cc
fortran/: CMakeLists.txt  cIO.f90  c_param.f90  c_regfile.f90  c_stubs.f90  genericFile.f90  genericIO.f90  hypercube.f90  ioModes.f90  param_func.f90  rsfIO.f90  sepIO.f90  sep_param.f90  sep_reg_file.f90
fortran/base/: CMakeLists.txt  genericFile.f90  hypercube.f90  param_func.f90
fortran/sep/: CMakeLists.txt  sep_param.f90  sep_reg_file.f90
include/: axis.h  axis_mod.mod  c_param_mod.mod  c_regfile_mod.mod  cio_mod.mod  genericFile.h  generic_c_stubs.mod  generic_file_mod.mod  generic_io_mod.mod  hypercubegen_mod.mod  ioConfig.h  iomodes_mod.mod  jsonGenericFile.h  paramObj.h  param_func_mod.mod  segyIO.h
lib/: CMakeLists.txt  ]  basicIO.cpp  buffersIO.cpp  buffersIO.h  buffersIrregFile.h  buffersRegFile.h  dictParams.cpp  dictParams.h  document.cpp  document.h  fileBuffersIO.cpp  fileBuffersIO.h  fileBuffersRegFile.cpp  fileBuffersRegFile.h  gcpBuffersIO.cpp  gcpBuffersIO.h  gcpBuffersRegFile.cpp  gcpBuffersRegFile.h  genericC.cpp  genericFile.cpp  genericFile.h  genericIO.cpp  genericIO.h  genericIOConfig.cmake  genericIOExports-noconfig.cmake  genericIOExports.cmake  ioModes.cpp  ioModes.h  irregFile.cpp  irregFile.h  jsonGenericIO.cpp  jsonGenericIO.h  jsonGenericIrregFile.cpp  jsonGenericIrregFile.h  jsonGenericRegFile.cpp  jsonGenericRegFile.h  jsonParamObj.h  memoryFile.cpp  memoryFile.h  (+25 more)
notebooks/: Example using genericIO.ipynb  tout.H
notebooks/.ipynb_checkpoints/: Example using genericIO-checkpoint.ipynb
python/: CMakeLists.txt  GenJob.py  GenSplit.py  genericFile.i  genericIO.i  genericIO.py  ioModes.i  ioModes.py  pyIO.cpp  test_GenericIO.py  test_Generic_IO.py  test_GenricIO.py  test_SEP.py
seis/: CMakeLists.txt
seis/filter/: CMakeLists.txt  GenInterp.py  GenInterp.py.in  test_GenInterp.py
seis/model/: CMakeLists.txt  GenSpike.py
unit-tests/: CMakeLists.txt  GCPIO.cc  GCPtest.cc
util/: CMakeLists.txt  Compress.cc  Decompress.cc  GenAttr.py  GenCp.py  GenDd  GenDd.py  GenIn.py  GenMv.py  GenRm.py  Info.cc  Info.py  JSONIZE  SEP2JSON  Window.cc  a.HH
util/header/: CMakeLists.txt  GenAttrHead.py  GenDis3dHead.py  GenWindowKey.py
util/info/: CMakeLists.txt  GenAttr.py  GenDd.py  GenIn.py
util/unix/: CMakeLists.txt  GenCp.py  GenMv.py  GenRm.py
x/: CMakeCache.txt
y/: CMakeCache.txt
