project(Generic-IO-util)
cmake_minimum_required(VERSION 2.8)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../cpp)

ADD_EXECUTABLE(Window Window.cc)
ADD_EXECUTABLE(Info Info.cc)
install(TARGETS Info Window  DESTINATION bin)
TARGET_LINK_LIBRARIES(Info genericCpp ${GENERIC_EXPORT_LIBS})
TARGET_LINK_LIBRARIES(Window genericCpp ${GENERIC_EXPORT_LIBS})
install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/SEP2JSON DESTINATION bin)
install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/JSONIZE DESTINATION bin)
